# GCalMCPConnector

./: .gitignore  README.md  STRUCTURE.md  main.py  pyproject.toml
src/: __init__.py
src/calendar/: __init__.py  api.py  auth.py  utils.py
src/mcp/: __init__.py  tools.py
tests/: gcaltest.py
